# stellarlend

./: REFACTORING_SUMMARY.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: formal-verification.yml  mutation-testing.yml
.husky/: commit-msg  pre-commit
api/: .env.example  .eslintrc.json  Dockerfile  jest.config.js  package.json
api/db/init/: 01_schema.sql
api/src/: app.ts
api/src/__tests__/: apiKey.service.test.ts  auth.test.ts  cors.test.ts  requestLogger.test.ts
api/src/config/: index.ts  types.ts
api/src/controllers/: analytics.controller.ts  config.controller.ts  crossAsset.controller.ts  debtToken.controller.ts  gas.controller.ts  lending.controller.ts  merkle.controller.ts  mev.controller.ts  nonce.controller.ts  portfolio.controller.ts  rebalancing.controller.ts  risk.controller.ts  staking.controller.ts  subscription.controller.ts  (+2 more)
cli/sllend/: package.json  tsconfig.json
contract/src/: deposit.rs  reentrancy_guard.rs  withdraw.rs
docs/: GAS_ESTIMATION_SYSTEM.md  RISK_MONITORING_DASHBOARD.md
environments/migration-sandbox/: docker-compose.override.yml  sandbox.config.json
oracle/: .env.example  .eslintrc.json  Dockerfile  package-lock.json  package.json  server.js  stryker.config.mjs  tsconfig.json  vitest.config.ts
oracle/src/: config.ts  index.ts  logger.ts
oracle/tests/: metrics-service.test.ts
scripts/: analyze-mutants.js  track-mutation-score.js
scripts/migration-simulator/: README.md  approve.sh  index.ts  report.ts  simulate.sh  snapshot.sh
scripts/sllend-completion/: sllend.bash  sllend.zsh
stellar-lend/: Cargo.toml
stellar-lend/contracts/: MODULAR_ARCHITECTURE.md
stellar-lend/contracts/credit-oracle/: Cargo.toml
stellar-lend/contracts/credit-oracle/src/: lib.rs
stellar-lend/contracts/lending/: Cargo.toml
stellar-lend/contracts/lending-core/: Cargo.toml
stellar-lend/contracts/lending-core/src/: lib.rs
stellar-lend/contracts/lending/docs/: PERF_OPTIMIZATION_BENCHMARKS.md
stellar-lend/contracts/lending/src/: borrow.rs  borrow_prop_test.rs  data_store.rs  deposit.rs  deposit_prop_test.rs  flash_loan.rs  flash_loan_test.rs  insurance.rs  interest.rs  interest_rate.rs  interest_rate_prop_test.rs  invariant_prop_test.rs  lazy.rs  lib.rs  liquidation.rs  meta.rs  proptest_helpers.rs  reentrancy.rs  reentrancy_fuzz_test.rs  risk_dashboard.rs  rounding.rs  storage.rs  token_adapter.rs  token_adapter_erc20.rs  token_adapter_native.rs  token_adapter_verify.rs  token_adapter_wrapped.rs  upgrade_test.rs  withdraw.rs  withdraw_prop_test.rs
stellar-lend/contracts/sns-integration/: Cargo.toml
stellar-lend/contracts/sns-integration/src/: lib.rs  test.rs  types.rs
(+136 files in other folders)
