[package]
name = "stellarlend-lending"
version = "0.1.0"
edition = "2021"


[lib]
name = "stellarlend_lending"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellarlend-common = { path = "../common" }
stellarlend-shared-deadline = { path = "../shared-deadline" }

[dev-dependencies]
stellarlend-common = { path = "../common", features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
delegation-registry = { path = "../delegation-registry" }

[features]
testutils = ["soroban-sdk/testutils"]
# Formal verification specification sub-modules.
# Run with: cargo test -p stellarlend-lending --features spec -- spec::
spec = []
# Kani bounded model-checking harnesses (requires `cargo kani`).
kani = []
