[package]
name = "sns-integration"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.9", features = ["alloc"] }
soroban-sdk-macros = "20.9"
stellarlend-common = { path = "../../packages/common" }
stellarlend-shared-deadline = { path = "../shared-deadline" }

[dev-dependencies]
